k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres          # Deployment находит свои поды по этой метке
  template:
    metadata:
      labels:
        app: postgres        # ← должна совпадать с selector выше
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata          # subPath избегает конфликта с lost+found на томе
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
# --- Service: стабильное DNS-имя "postgres" внутри кластера ---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: url-shortener
spec:
  selector:
    app: postgres            # Service шлёт трафик подам с этой меткой
  ports:
    - port: 5432
      targetPort: 5432
